fixing colors in mail template

--- a/doc/sendgrid-email-template.hbs
+++ b/doc/sendgrid-email-template.hbs
@@ -150,15 +150,15 @@
                                                             <div>
                                                                 <span style="font-size: 12px; font-family: verdana,geneva,sans-serif; color: white;"><b>{{this.title}}</b></span>
                                                                 <br/>
-                                                                <span style="font-size: 12px; font-family: verdana,geneva,sans-serif">Size: {{#if this.size}}{{this.size}}{{else}}unknown{{/if}}</span>
+                                                                <span style="font-size: 12px; font-family: verdana,geneva,sans-serif; color: white;">Size: {{#if this.size}}{{this.size}}{{else}}unknown{{/if}}</span>
                                                                 <br/>
-                                                                <span style="font-size: 12px; font-family: verdana,geneva,sans-serif">Price: {{#if this.price}}{{this.price}}{{else}}unknown{{/if}}</span>
+                                                                <span style="font-size: 12px; font-family: verdana,geneva,sans-serif; color: white;">Price: {{#if this.price}}{{this.price}}{{else}}unknown{{/if}}</span>
                                                                 <br/>
-                                                                <span style="font-size: 12px; font-family: verdana,geneva,sans-serif">{{#if this.address}}{{this.address}}{{else}}unknown{{/if}}</span>
+                                                                <span style="font-size: 12px; font-family: verdana,geneva,sans-serif; color: white;">{{#if this.address}}{{this.address}}{{else}}unknown{{/if}}</span>
                                                                 <br/>
                                                                 <a href="{{this.link}}" target="_blank" style="color:#00dc73; font-size:13px">{{this.link}}</a>
                                                                 <br/>
-                                                                ---------------------------
+                                                                <span style="color: white;">---------------------------</span>
                                                             </div>
                                                         </td>
                                                     </tr>
