improving ui / ux

--- a/ui/src/App.less
+++ b/ui/src/App.less
@@ -11,3 +11,11 @@
     color: #f1f1f1;
   }
 }
+
+.ui.inverted.segment{
+  background: #31303078!important;
+}
+
+.ui.black.label, .ui.black.labels .label {
+  background-color: #31303078!important;
+}
