first steps in using the new ui

--- a/ui/src/views/generalSettings/GeneralSettings.less
+++ b/ui/src/views/generalSettings/GeneralSettings.less
@@ -2,20 +2,12 @@
   &__timePickerContainer {
     display: flex;
     align-items: baseline;
-  }
-
-  &__until {
-    margin-left: 1rem;
-    margin-right: 1rem;
+    gap: 1rem;
   }
 
   &__help{
     font-size: 11px;
     margin-left: 1rem;
-  }
-
-  &__message{
-    background: #8fe8ff!important;
   }
 
 }
