--- a/ui/src/App.less
+++ b/ui/src/App.less
@@ -7,8 +7,8 @@
     width: 100%;
 
     padding: 1rem 1rem;
-    background-color: #595959f5;
-    color: #f1f1f1;
+    color: var(--semi-color-text-0);
+    background-color: #232429;
   }
 }
 
