--- a/ui/src/App.less
+++ b/ui/src/App.less
@@ -4,8 +4,6 @@
   width:100%;
 
   &__container {
-    width: 100%;
-
     padding: 1rem 1rem;
     color: var(--semi-color-text-0);
     background-color: #232429;
@@ -18,4 +16,28 @@
 
 .ui.black.label, .ui.black.labels .label {
   background-color: #31303078!important;
+}
+
+a:link {
+  color: #54a9ff;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #54a9ff;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #54a9ff;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: #54a9ff;
+  background-color: transparent;
+  text-decoration: underline;
 }
