--- a/ui/src/views/dashboard/Dashboard.less
+++ b/ui/src/views/dashboard/Dashboard.less
@@ -1,8 +1,34 @@
 .dashboard {
   padding: 24px;
 
+  &__empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 400px;
+    padding: 24px;
+  }
+
+  &__empty-content {
+    max-width: 600px;
+    text-align: center;
+  }
+
+  &__empty-actions {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+  }
+
   &__selector {
     margin-bottom: 24px;
+  }
+
+  &__table {
+    background: var(--semi-color-bg-0);
+    border-radius: 6px;
+    box-shadow: var(--semi-shadow-elevated);
+    margin-top: 16px;
   }
 
   &__grid {
@@ -22,36 +48,5 @@
 
   &__tags {
     margin: 12px 0;
-  }
-
-  &__empty {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 400px;
-    padding: 24px;
-
-    .semi-banner {
-      max-width: 600px;
-      width: 100%;
-      padding-bottom: 16px;
-      padding-top: 16px;
-
-      .semi-banner-icon {
-        font-size: 32px;
-        margin-right: 32px;
-      }
-
-    }
-
-    &-content {
-      text-align: left;
-    }
-
-    &-actions {
-      display: flex;
-      justify-content: flex-start;
-      margin-top: 24px;
-    }
   }
 } 
