chore: run lint autofix and formatter

--- a/ui/src/components/placeholder/Placeholder.less
+++ b/ui/src/components/placeholder/Placeholder.less
@@ -1,10 +1,10 @@
 .place {
   height: 100%;
   width: 100%;
-  display:flex;
+  display: flex;
 
-  &__place_lines_wrapper{
-    width:100%;
+  &__place_lines_wrapper {
+    width: 100%;
   }
 
   &__line {
@@ -20,17 +20,16 @@
     border-radius: 360px;
     animation: pulse 1s infinite ease-in-out;
   }
-
 }
 
 @keyframes pulse {
   0% {
-    background-color: rgba(165, 165, 165, 0.1)
+    background-color: rgba(165, 165, 165, 0.1);
   }
   50% {
-    background-color: rgba(165, 165, 165, 0.3)
+    background-color: rgba(165, 165, 165, 0.3);
   }
   100% {
-    background-color: rgba(165, 165, 165, 0.1)
+    background-color: rgba(165, 165, 165, 0.1);
   }
 }
