--- a/ui/src/Index.less
+++ b/ui/src/Index.less
@@ -1,11 +1,12 @@
-body, html {
+body,
+html {
   margin: 0;
   height: 100%;
   width: 100%;
   background-color: #232429;
 }
 
-.semi-table-row-head{
+.semi-table-row-head {
   background-color: #2b2b2b !important;
   color: #fff !important;
 }
