first draft of ui redesign

--- a/ui/src/views/jobs/Jobs.less
+++ b/ui/src/views/jobs/Jobs.less
@@ -1,7 +1,8 @@
 .jobs {
   &__newButton {
     margin-top: 1rem !important;
-    float: right;
+    float: left;
     margin-bottom: 1rem !important;
+    margin-left: 1rem;
   }
 }
