adding buttons to remove listings from a given job

--- a/ui/src/components/table/JobTable.less
+++ b/ui/src/components/table/JobTable.less
@@ -5,6 +5,11 @@
   gap: 1rem;
 }
 
+.jobPopoverContent {
+  padding: 1rem;
+  color: white;
+}
+
 @media (min-width: 768px) {
   .interactions {
     flex-direction: initial;
