adding new dashboard view. Muchas wow

--- a/ui/src/components/segment/SegmentParts.less
+++ b/ui/src/components/segment/SegmentParts.less
@@ -1,6 +1,6 @@
 .segmentParts {
   border: 1px solid #323232 !important;
-  border-radius: 5px !important;
+  border-radius: .9rem !important;
   color: rgba(var(--semi-grey-8), 1);
   background: rgb(53, 54, 60);
   margin: 2rem;
