redesigning listing table

--- a/ui/src/components/cards/DashboardCardColors.less
+++ b/ui/src/components/cards/DashboardCardColors.less
@@ -3,11 +3,11 @@
 @color-blue-text: #60a5fa;
 
 @color-orange-bg: rgba(250, 91, 5, 0.12);
-@color-orange-border: #d33601;
+@color-orange-border: #992f0c;
 @color-orange-text: #FB923CFF;
 
 @color-green-bg: rgba(38, 250, 5, 0.12);
-@color-green-border: #00c316;
+@color-green-border: #278832;
 @color-green-text: #33f308;
 
 @color-purple-bg: rgba(91, 3, 218, 0.38);
