preparing job grid

--- a/ui/src/components/grid/jobs/JobGrid.less
+++ b/ui/src/components/grid/jobs/JobGrid.less
@@ -9,9 +9,29 @@
     }
   }
 
+  &__searchbar {
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+  }
+
+  &__toolbar {
+    &__card {
+      border-radius: 5px;
+      display: flex;
+      flex-direction: column;
+      gap: .3rem;
+      background: #232429;
+      padding: 0.5rem;
+    }
+  }
+
   &__header {
     display: flex;
     align-items: center;
+    justify-content: space-between;
   }
 
   &__title {
@@ -22,11 +42,11 @@
     display: flex;
     align-items: center;
     width: 100%;
-    
+
     .semi-typography {
-        display: flex;
-        align-items: center;
-        gap: 4px;
+      display: flex;
+      align-items: center;
+      gap: 4px;
     }
   }
 
@@ -34,6 +54,12 @@
     display: flex;
     justify-content: space-between;
     gap: 8px;
+  }
+
+  &__pagination {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
   }
 }
 
