adapt link to listing in grid view to behave like a real link

--- a/ui/src/components/grid/listings/ListingsGrid.less
+++ b/ui/src/components/grid/listings/ListingsGrid.less
@@ -103,4 +103,17 @@
   &__setupButton {
     margin-bottom: 1rem;
   }
+
+  &__linkButton {
+    background: var(--semi-color-fill-0);
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 600;
+    height: 24px;
+    width: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+  }
 }
