improved tooltip in map, improved user-settings handling

--- a/ui/src/App.less
+++ b/ui/src/App.less
@@ -40,6 +40,8 @@ a:active {
   text-decoration: underline;
 }
 
+a {outline : none;}
+
 .semi-icon:not(.semi-tabs-bar .semi-tabs-tab .semi-icon) {
   vertical-align: middle;
 }
