--- a/ui/src/components/footer/FredyFooter.less
+++ b/ui/src/components/footer/FredyFooter.less
@@ -1,20 +1,9 @@
 .fredyFooter {
-  background:rgb(53, 54, 60);
-  color: white;
+  background-color: var(--semi-color-bg-1);
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
-  height: 1.7rem;
-  border-radius: .3rem;
-  border-top: 1px solid #45464b;
-
-  &__version {
-    padding-left: .5rem;
-    font-size: small;
-
-  }
-  &__copyRight {
-    padding-right: 1rem;
-
-  }
+  padding: 0 1rem;
+  height: 32px;
+  border-top: 1px solid var(--semi-color-border);
 }
