--- a/ui/src/components/grid/jobs/JobGrid.less
+++ b/ui/src/components/grid/jobs/JobGrid.less
@@ -1,11 +1,16 @@
 .jobGrid {
   &__card {
     height: 100%;
-    transition: transform 0.2s;
+    transition: transform 0.2s, box-shadow 0.2s;
+    background-color: rgba(36, 36, 36, 0.9);
+    backdrop-filter: blur(8px);
+    border: 1px solid var(--semi-color-border);
+    box-shadow: 0 0 15px -3px rgb(78 78 78 / 50%);
 
     &:hover {
       transform: translateY(-4px);
-      box-shadow: var(--semi-shadow-elevated);
+      box-shadow: 0 0 15px -3px rgb(78 78 78 / 70%);
+      background-color: rgba(36, 36, 36, 1);
     }
   }
 
@@ -19,12 +24,14 @@
 
   &__toolbar {
     &__card {
-      border-radius: 5px;
+      border-radius: var(--semi-border-radius-medium);
       display: flex;
       flex-direction: column;
       gap: .3rem;
-      background: #232429;
+      background: rgba(36, 36, 36, 0.9);
+      backdrop-filter: blur(8px);
       padding: 0.5rem;
+      border: 1px solid var(--semi-color-border);
     }
   }
 
