adding glow to all boxes on dashboard

--- a/ui/src/components/cards/DashboardCard.less
+++ b/ui/src/components/cards/DashboardCard.less
@@ -23,6 +23,9 @@
     &.purple {
       box-shadow: 0 8px 24px -5px var(--semi-color-info);
     }
+    &.gray {
+      box-shadow: 0 8px 24px -5px rgba(255, 255, 255, 0.4);
+    }
   }
 
   &__icon {
@@ -59,5 +62,6 @@
   }
 
   &.gray {
+    box-shadow: 0 4px 20px -5px rgba(255, 255, 255, 0.2);
   }
 }
