--- a/ui/src/components/footer/FredyFooter.less
+++ b/ui/src/components/footer/FredyFooter.less
@@ -6,4 +6,7 @@
   padding: 0 1rem;
   height: 32px;
   border-top: 1px solid var(--semi-color-border);
+  z-index: 1000;
+  position: relative;
+  flex-shrink: 0;
 }
