smaller demo improvements

--- a/ui/src/App.less
+++ b/ui/src/App.less
@@ -17,6 +17,8 @@
     padding: 24px;
     background-color: var(--semi-color-bg-0);
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
 
     @media (max-width: 768px) {
       padding: 12px;
