feat(): solve feedback

--- a/ui/src/components/map/Map.less
+++ b/ui/src/components/map/Map.less
@@ -3,6 +3,10 @@
  * Licensed under Apache-2.0 with Commons Clause and Attribution/Naming Clause
  */
 
+.map-container {
+  height: 100%;
+}
+
 /* Fix Mapbox Draw cursors for MapLibre GL compatibility */
 .maplibregl-map.mouse-pointer .maplibregl-canvas-container.maplibregl-interactive {
   cursor: pointer;
