--- a/ui/src/views/jobs/mutation/components/areaFilter/AreaFilter.less
+++ b/ui/src/views/jobs/mutation/components/areaFilter/AreaFilter.less
@@ -3,11 +3,6 @@
  * Licensed under Apache-2.0 with Commons Clause and Attribution/Naming Clause
  */
 
-.areaFilter-container {
-  height: 500px;
-
-  .map-container {
-    height: 100%;
-  }
+.areaFilter {
+  height: 50rem;
 }
-
